--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/QED0711/ds_practice#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "dom-parser": "^0.1.6"
   }
 }
